2005-01-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* data/.cvsignore: upd
	* src/metadata-test.c: (main): set the right program name

2005-01-24  Shaun McCance  <shaunm@gnome.org>

	* src/totem-pl-parser.c: (totem_pl_parser_add_directory):
	  escape filenames when constucting URIs (#165049)

2005-01-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c: (totem_interface_error_dialog):
	try to avoid problems with unescaped error messages passed to the
	error dialog (Closes: #164627)

2005-01-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (setup_vis),
	(bacon_video_widget_get_popt_table),
	(bacon_video_widget_init_backend):
	* src/bacon-video-widget-xine.c: (bacon_video_widget_init_backend):
	* src/bacon-video-widget.h:
	* src/totem-properties-main.c: (nautilus_module_initialize):
	  Add bacon_video_widget_init_backend() for popt-less apps,
	  plus a cast fix.

2005-01-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (setup_vis):
	  Refcounting fixes for visualization element since we keep our
	  own pointer as well.

2005-01-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* COPYING.LIB: Add LGPL license file, to indicate that
	libtotem-plparser is now LGPL.  Fixes #164193.

	* Makefile.am (EXTRA_DIST): Add COPYING.LIB.

2005-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_audio_out_type): update the audio output
	strings with xine-lib, should fix AC3 Passthrough playback

2005-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/metadata-test.c: (totem_create_full_path), (main):
	transform the path into a URI if necessary to make the GStreamer
	backend happy

2005-01-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler):
	  Hack to fix some problems with nvidia graphics cards.

2005-01-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
